chore: node core modules are not ignored correctly

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 enable-pre-post-scripts=true
+node-linker=pnp
 ; https://github.com/pkg-size/action/pull/45
 ; package-lock=false
 public-hoist-pattern[]=@1stg/*
@@ -11,3 +12,4 @@ public-hoist-pattern[]=json5
 public-hoist-pattern[]=*prettier*
 public-hoist-pattern[]=simple-git-hooks
 strict-peer-dependencies=false
+symlink=false
