--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "lint": "run-p lint:*",
     "lint:es": "eslint src --cache -f friendly",
     "lint:tsc": "tsc --noEmit",
-    "prepare": "simple-git-hooks || exit 0",
+    "prepare": "NODE_OPTIONS='--require=./.pnp.cjs' simple-git-hooks || exit 0",
     "prerelease": "yarn build",
     "release": "changeset publish",
     "test": "run-p test:*",
@@ -104,9 +104,11 @@
   },
   "devDependencies": {
     "@1stg/lib-config": "^7.2.6",
+    "@1stg/simple-git-hooks": "^0.2.0",
     "@changesets/changelog-github": "^0.4.5",
     "@changesets/cli": "^2.23.0",
     "@mozilla/glean": "^1.0.0",
+    "@pkgr/utils": "^2.3.0",
     "@types/debug": "^4.1.7",
     "@types/enhanced-resolve": "^3.0.7",
     "@types/is-core-module": "^2.2.0",
@@ -116,6 +118,7 @@
     "dummy.js": "link:dummy.js",
     "eslint-import-resolver-typescript": "link:.",
     "react": "^18.2.0",
+    "simple-git-hooks": "^2.8.0",
     "type-coverage": "^2.21.2",
     "typescript": "^4.7.4"
   },
