fix: don't ignore the tsconfig file name in project paths or path patterns
`getTsConfig` treats every path as a directory and looks for a `tsconfig.json` in the closest parent directory

this breaks any configuration that uses file names other than tsconfig.json, as is convention for [solution-style](https://devblogs.microsoft.com/typescript/announcing-typescript-3-9/#solution-style-tsconfig) tsconfigs, which is exacerbated by the lack of support for the `references` field (see #94)

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "test:withPathsAndNestedBaseUrl": "eslint --ext ts,tsx tests/withPathsAndNestedBaseUrl",
     "test:withQuerystring": "eslint --ext ts,tsx tests/withQuerystring",
     "test:withoutPaths": "eslint --ext ts,tsx tests/withoutPaths",
+    "test:nonDefaultTsconfigFileName": "eslint --ext ts,tsx tests/nonDefaultTsconfigFileName",
     "typecov": "type-coverage"
   },
   "peerDependencies": {
